updated the example with the entire fields

--- a/docs/examples/single/sql-query.yaml
+++ b/docs/examples/single/sql-query.yaml
@@ -13,6 +13,12 @@ spec:
     cleanup:
       policy: delete
       retentionTimeDays: 2
+    partitionCompactionKeyField": product_logistics.metadata.partition_compaction_key
+    repartitioning:
+      strategy: hash
+      keys:
+        - important_key
+      partitionCount: 8
   auth:
     teams:
       admins:
